--- a/index.html
+++ b/index.html
@@ -4,19 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Projects</title>
+    <title>Simple Calculator</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <section class="calculator">
-        <div id="result">
-            <div id="output">
-                <p id="output-value"></p>
-            </div>
-            <div id="history">
-                <p id="history-value"></p>
-            </div>
-        </div>
+       
         <form action="">
             <input type="text" class="screen">
         </form>
